# KidPatrolLight

./: .gitmodules  README.md
firmware/: Cargo.toml  README.md  justfile
firmware/cpp/: create_gamma.py  gamma_py.h  readme.md
firmware/cpp/include/: animations.h  pindefinitions.h
firmware/cpp/lib/leds/: gamma.h  leds.c  leds.h
firmware/cpp/src/: main.c
firmware/rust/: rust-toolchain.toml
firmware/rust/.cargo/: config.toml
firmware/rust/src/: main.rs
firmware/src/: main.rs
